change baidu track id

--- a/_posts/2016-09-18-first.markdown
+++ b/_posts/2016-09-18-first.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "第一篇"
+title:      "初篇"
 subtitle:    " \"嘿，你好\""
 date:       2016-09-18 12:00:00
 author:     "LRZ"
@@ -14,17 +14,17 @@ tags:
 
 ## 前言
 
-来访者，你好，我是林润泽。这里是我分享学习经历的地方，扯淡周边事情的地方，一个畅所欲言的地方。
+来访者，你好。这里是我分享学习经历的地方，扯淡周边事情的地方，一个畅所欲言的地方。
 
 ## 正文
 
-这里是采用业界前辈的Jeklly模板和Github Pages搭建的。以前折腾过Asp.net+C#+SqlServer,也做过PHP+Apache+MySql,但在下的技术火候尚不够，做出来的感觉和前辈比差了很多，先采用前辈的模板，读书人的事情怎么能叫抄呢，代码链接在底部，不吹不黑，Github真的是业界良心。
+这里是采用业界前辈的Jeklly模板和Github Pages搭建的。<br/>
+折腾过Asp.net+C#+SqlServer,也玩过PHP+Apache+MySql,但目前在下才疏学浅，做出来的感觉和这个模板差了很多，更重要的是学生党穷呀，用Github不要租主机，嘿嘿嘿。
 
-目前大二在读，不，现在是大三了，学校搬迁新校区没建好又放了一个月假。
 
-在家慵懒了很多，每天背点日语单词，网上逛逛，洗洗衣做做饭一天就晃过去了。其实在下还是比较爱写写画画，高中语文可是班级一霸，周边的小伙伴都上学去了，空虚的我只好自己写点什么打发时间，就这样，这个地方开通了。
+
 
 ## 后记
-嘿，我上大学才接触到C语言感觉起步就落后了许多，今年七月份才算了解了HTML这一类的东西，但是我已经决定好毕业了要做前端工程师了。大二折腾了机器人仿真相关的东西主要是参加RoboCup，后来应老师要求学ROS机器人操作系统，但是太小众了，用它写了个简单的驱动包后我不打算深入下去了，说实话机器人这东西前景是很好，但我看见电路图就烦躁。现在还是打算学习前端方面的知识再去考个日语证书，短期的目标就是这样，喵~
+上大学才接触到C语言感觉起步就落后了许多，今年七月份才算了解了HTML这一类的东西，大二主要搞了RoboCup和ROS相关的东西，现在已经沉迷前端不能自拔了。学习的最大动力还是来源于生活，不学习就会被社会淘汰，学生时代所做的一切为了在未来生活中自己有权力选择。
 
-这里是我扯淡的地方，一个普通的科班大学生在IT界的经历。
+这里是我扯淡的地方，一个刚入大三的学生的点滴。
