--- a/_posts/2016-09-18-first.markdown
+++ b/_posts/2016-09-18-first.markdown
@@ -12,19 +12,14 @@ tags:
 > 请多指教
 
 
-## 前言
+## 嘿
 
-来访者，你好。这里是我分享学习经历的地方，扯淡周边事情的地方，一个畅所欲言的地方。
+来访者，你好。这里是一个中二少年爱发呆的地方。
+## 额
 
-## 正文
-
-这里是采用业界前辈的Jeklly模板和Github Pages搭建的。<br/>
-折腾过Asp.net+C#+SqlServer,也玩过PHP+Apache+MySql,但目前在下才疏学浅，做出来的感觉和这个模板差了很多，有现成的插件更方便，更重要的是学生党穷呀，用Github不要租主机，嘿嘿嘿。
-
-
+这里是采用业界前辈的Jeklly模板和Github Pages搭建的。前辈链接在最底部，觉得不错给前辈star一下吧，支持开源精神。<br/>
+目前不会Jekyll，好多东西要学，还想学更多的东西。好想拉小提琴嗷，也好想弹钢琴，好像做自己喜欢做的事情，但是。
 
 
 ## 后记
-上大学才接触到C语言感觉起步就落后了许多，今年七月份才算了解了HTML这一类的东西，大二主要搞了RoboCup和ROS相关的东西，现在已经沉迷前端不能自拔了。学习的最大动力还是来源于生活，不学习就会被社会淘汰，学生时代所做的一切为了在未来生活中自己有权力选择。
-
-这里是我扯淡的地方，一个刚入大三的学生的点滴。
+觉得挂在CSDN，博客园什么的比较low，所以就有了这里，但在下实在才疏学浅写不出什么技术文章，耍耍小清新倒还行...
