--- a/_posts/2016-11-30-小知识点.markdown
+++ b/_posts/2016-11-30-小知识点.markdown
@@ -21,6 +21,11 @@ tags:
 (1)DOM深度，回流会从根节点遍历到要修改的子节点，所以要减少不必要的深度。<br>
 (2)精简CSS，以前一直喜欢把颜色的十六进制写全，后来偶尔发现CSS的大小越小越好。<br>
 (3)日后更新
-
-
+3. 关于style.left<br>
+踩坑里好久，心疼<br>
+(1)style.left返回值为字符串类型，可以使用parseInt()转换。
+offsetLeft返回值是数字。<br>
+(2)style.left可以读写，offsetLeft只读。<br>
+(3)最重要的一点，必须在标签中class定义left，定义在外面css的话，style.left取到的是undefined，offsetLeft可以取到。<br>
+ps:今天看了你的名字，没看完我的玻璃心就崩了，还好新海诚最后没给观众喂屎，狗粮也比屎好。我也等你好久啦，只是忘记了你的名字，以后带女朋友好好看一遍，一直崩到现在无心学习，只能更博打发时间。
 
