--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -1,17 +1,17 @@
 ---
 layout:     post
 title:      "每日总结"
-subtitle:    "中二比较严重"
+subtitle:    "不辜负每一天"
 date:       2016-12-11 00:06:00
 author:     "LRZ"
-header-img: "img/16-12-111.jpg"
+header-img: "img/16-12-11.jpg"
 tags:
     - 生活
 ---
 
 >那些比你厉害的人比你更努力，你努力还有什么用啊？  
 >我只想比昨天的我更优秀。
-
+<br>
 ## 2016.12.11
 
 
