--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -9,9 +9,9 @@ tags:
     - 生活
 ---
 
->那些比你厉害的人比你更努力，你努力还有什么用啊？  
->我只想比昨天的我更优秀。
-<br>
+>那些比你厉害的人比你更努力，你努力还有什么用啊？ <br>
+>我只想比昨天的我更优秀。<br>
+
 ## 2016.12.11
 
 
