--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -19,3 +19,10 @@ tags:
 2.刷完js经典50题数组部分。
 
 ## 2016.12.12
+1.竟然还是服务器的问题，打脸昨天，但离开资料根本不会写socket方面的程序。  
+2.java链表实现多项式相加没写好，果然很笨我。  
+3.js50题刷到19题，要求返回对象包含方法，这方面不熟悉啊。  
+4.新标日语到第九课。  
+5.继续之前半路扔下的微信公众号开发，php小半年不用感觉好生，准备重头再复习一遍。  
+6.技能树点的太杂，没一个精通的。  
+7.我特喵的也想像陈老师一样手写树上带权匹配一次AC，但是现在真的很菜嗷。
