--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -12,17 +12,23 @@ tags:
 >那些比你厉害的人比你更努力，你努力还有什么用啊？ <br>
 >我只想比昨天的我更优秀。<br>
 
-## 2016.12.11
+### 2016.12.10
 
 
 1.学习java socket，编写简单聊天室，bug:一个客户端发消息其他客户端接收不到，但服务器端检验无问题。  
 2.刷完js经典50题数组部分。
 
-## 2016.12.12
+### 2016.12.11
 1.竟然还是服务器的问题，打脸昨天，但离开资料根本不会写socket方面的程序。  
 2.java链表实现多项式相加没写好，果然很笨我。  
 3.js50题刷到19题，要求返回对象包含方法，这方面不熟悉啊。  
 4.新标日语到第九课。  
 5.继续之前半路扔下的微信公众号开发，php小半年不用感觉好生，准备重头再复习一遍。  
 6.技能树点的太杂，没一个精通的。  
-7.我特喵的也想像陈老师一样手写树上带权匹配一次AC，但是现在真的很菜嗷。
+7.我特喵的也想像陈老师一样手写树上带权匹配一次AC，但是现在真的很菜嗷。  
+
+### 2016.12.12  
+1.js刷到23题，计时器通过浪费不少时间，没ac过原因是没立即输出第一个值。  
+2.新标日背完第九课单词。  
+3.简单复习完java异常，准备下周java考试。
+4.今天最大收获是搞清楚了apply()和call()方法。  
