--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -9,11 +9,11 @@ tags:
     - 生活
 ---
 
->那些比你厉害的人比你更努力，你努力还有什么用啊？ <br>
->我只想比昨天的我更优秀。<br>
+>那些比你厉害的人比你更努力，努力还有什么用啊？ <br>
+>我只想比昨天的我更优秀。<br>  
+>三省吾身，只求无愧于自己的安稳过日子的梦想。
 
 ### 2016.12.10
-
 
 1.学习java socket，编写简单聊天室，bug:一个客户端发消息其他客户端接收不到，但服务器端检验无问题。  
 2.刷完js经典50题数组部分。
@@ -31,4 +31,9 @@ tags:
 1.js刷到23题，计时器通过浪费不少时间，没ac过原因是没立即输出第一个值。  
 2.新标日背完第九课单词。  
 3.简单复习完java异常，准备下周java考试。
-4.今天最大收获是搞清楚了apply()和call()方法。  
+4.今天最大收获是搞清楚了apply()和call()方法。    
+  
+### 2016.12.13  
+1.电脑突然挂了，把硬盘里数据取出来后，找修电脑的检测了一下，只是有根线掉了...小哥赚外快真不容易呀，从南大街骑车一个多小时过来，还这么冷...忘记给他辛苦费了感觉过意不去。今天没学啥,泪。  
+2.用php给客户发给客户端的消息打日志，没搞清楚微信的接口是只要验证一次，下次不验证token都可以把信息发给服务器，之前以为微信每次提交数据给服务器都要验证一下随机的字符串。  
+3.新标日巩固第九课单词，下了一天雨很难受。下学期准备考个JTest吧，今天很愧疚没学什么。
