--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -36,4 +36,9 @@ tags:
 ### 2016.12.13  
 1.电脑突然挂了，把硬盘里数据取出来后，找修电脑的检测了一下，只是有根线掉了...小哥赚外快真不容易呀，从南大街骑车一个多小时过来，还这么冷...忘记给他辛苦费了感觉过意不去。今天没学啥,泪。  
 2.用php给客户发给客户端的消息打日志，没搞清楚微信的接口是只要验证一次，下次不验证token都可以把信息发给服务器，之前以为微信每次提交数据给服务器都要验证一下随机的字符串。  
-3.新标日巩固第九课单词，下了一天雨很难受。下学期准备考个JTest吧，今天很愧疚没学什么。
+3.新标日巩固第九课单词，下了一天雨很难受。下学期准备考个JTest吧，今天很愧疚没学什么。  
+
+### 2016.12.14
+1.写了好久一个类似约瑟夫环的问题，只是每次数到某个人后从下一开再重新计其他数，复杂度还是n三次方，呜而且还有bug，有时候头结点删不掉。  
+2.js只向下刷了一题，到闭包了，这方面掌握太差。  
+3.计划js，java都重头刷一遍数据结构。
