--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -39,6 +39,12 @@ tags:
 3.新标日巩固第九课单词，下了一天雨很难受。下学期准备考个JTest吧，今天很愧疚没学什么。  
 
 ### 2016.12.14
-1.写了好久一个类似约瑟夫环的问题，只是每次数到某个人后从下一开再重新计其他数，复杂度还是n三次方，呜而且还有bug，有时候头结点删不掉。  
+1.写了好久一个类似约瑟夫环的问题，只是每次数到某个人后从下一开再重新计其他数，复杂度还是m*n*n，呜而且还有bug，有时候头结点删不掉。  
 2.js只向下刷了一题，到闭包了，这方面掌握太差。  
-3.计划js，java都重头刷一遍数据结构。
+3.计划js，java都重头刷一遍数据结构。  
+
+### 2016.12.15  
+1.决定开始刷左程云老师的书，数了下一共266题，明年七月前要刷完。第一遍先不管复杂度，只要满足题意即可，第二遍学最优解法。两百题后无庸手吧。  
+2.把昨天bug解决了，果然是删除节点有问题，删掉头结点后没把尾指向下一个，然后实现了二叉树的建立吧，刚接触java两个月连熟悉都不敢称，只敢说勉强了解。  
+3.新标日语到第十课。  
+4.时间不够用又觉得微信开发不能半途撂下了，怎么着也要有一个在线上运行的项目，每天就花十分钟在上面也总比没有好点...花了几分钟写了简单的发固定内容回复固定内容。还有天气冷得没去跑步。
