--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -47,4 +47,12 @@ tags:
 1.决定开始刷左程云老师的书，数了下一共266题，明年七月前要刷完。第一遍先不管复杂度，只要满足题意即可，第二遍学最优解法。两百题后无庸手吧。  
 2.把昨天bug解决了，果然是删除节点有问题，删掉头结点后没把尾指向下一个，然后实现了二叉树的建立吧，刚接触java两个月连熟悉都不敢称，只敢说勉强了解。  
 3.新标日语到第十课。  
-4.时间不够用又觉得微信开发不能半途撂下了，怎么着也要有一个在线上运行的项目，每天就花十分钟在上面也总比没有好点...花了几分钟写了简单的发固定内容回复固定内容。还有天气冷得没去跑步。
+4.时间不够用又觉得微信开发不能半途撂下了，怎么着也要有一个在线上运行的项目，每天就花十分钟在上面也总比没有好点...花了几分钟写了简单的发固定内容回复固定内容。还有天气冷得没去跑步。  
+
+### 2016.12.16  
+1.完成设计一个查询最小数的栈，push,pop复杂度都为1。  
+2.js闭包不懂，题目没刷下去。   
+3.花十分钟做了微信回复图文消息的demo。  
+4.新标日语第十课单词基本背完。  
+5.复习了java基础知识点，准备下周考试。
+6.明天四六级考试和我并没有什么关系呢，虽然六级分不高但总归过了(轮子哥式逃跑）。
