--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -9,9 +9,9 @@ tags:
     - 生活
 ---
 
->那些比你厉害的人比你更努力，努力还有什么用啊？ <br>
->我只想比昨天的我更优秀。<br>  
->三省吾身，只求无愧于自己的安稳过日子的梦想。
+>自从见过他们的光芒后，再也忍受不了黑暗。 <br>
+>他们就像一道光，biu,如沐春风。<br>  
+
 
 ### 2016.12.10
 
@@ -49,10 +49,15 @@ tags:
 3.新标日语到第十课。  
 4.时间不够用又觉得微信开发不能半途撂下了，怎么着也要有一个在线上运行的项目，每天就花十分钟在上面也总比没有好点...花了几分钟写了简单的发固定内容回复固定内容。还有天气冷得没去跑步。  
 
-### 2016.12.16  
+#### 2016.12.16  
 1.完成设计一个查询最小数的栈，push,pop复杂度都为1。  
 2.js闭包不懂，题目没刷下去。   
 3.花十分钟做了微信回复图文消息的demo。  
 4.新标日语第十课单词基本背完。  
 5.复习了java基础知识点，准备下周考试。
-6.明天四六级考试和我并没有什么关系呢，虽然六级分不高但总归过了(轮子哥式逃跑）。
+6.明天四六级考试和我并没有什么关系呢，虽然六级分不高但总归过了(逃  
+ 
+#### 2016.12.17  
+1.刷了两题，栈模拟队列，递归逆序栈。  
+2.js甚是复杂，总结了一点闭包，原以为目前技能点的最多的语言，看了谦谦开源的b站播发器一脸懵，总在想为什么人家可以这么厉害，而我喵了个咪的什么都不会。  
+3.新标日语背到第十一课单词，冬天在外面背书好冷。    
