--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -60,4 +60,10 @@ tags:
 #### 2016.12.17  
 1.刷了两题，栈模拟队列，递归逆序栈。  
 2.js甚是复杂，总结了一点闭包，原以为目前技能点的最多的语言，看了谦谦开源的b站播发器一脸懵，总在想为什么人家可以这么厉害，而我喵了个咪的什么都不会。  
-3.新标日语背到第十一课单词，冬天在外面背书好冷。    
+3.新标日语背到第十一课单词，冬天在外面背书好冷。   
+
+#### 2016.12.18  
+1.解决积累了一周的作业  
+2.洗了一周的衣服  
+3.开了一个新项目商用的  
+     
