--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -66,4 +66,10 @@ tags:
 1.解决积累了一周的作业  
 2.洗了一周的衣服  
 3.开了一个新项目商用的  
+
+#### 2016.12.19
+1.新标日背完11课单词和语法  
+2.用markdown写开发文档，Windows下的不支持toc生成目录，捉急，找个时间自己写个插件。  
+3.今天竟然连一道左老师的题都编完。
+
      
