--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -9,9 +9,7 @@ tags:
     - 生活
 ---
 
->自从见过他们的光芒后，再也忍受不了黑暗。 <br>
->他们就像一道光，biu,如沐春风。<br>  
-
+>他们就像一道光。
 
 ### 2016.12.10
 
@@ -49,7 +47,7 @@ tags:
 3.新标日语到第十课。  
 4.时间不够用又觉得微信开发不能半途撂下了，怎么着也要有一个在线上运行的项目，每天就花十分钟在上面也总比没有好点...花了几分钟写了简单的发固定内容回复固定内容。还有天气冷得没去跑步。  
 
-#### 2016.12.16  
+### 2016.12.16  
 1.完成设计一个查询最小数的栈，push,pop复杂度都为1。  
 2.js闭包不懂，题目没刷下去。   
 3.花十分钟做了微信回复图文消息的demo。  
@@ -57,17 +55,17 @@ tags:
 5.复习了java基础知识点，准备下周考试。
 6.明天四六级考试和我并没有什么关系呢，虽然六级分不高但总归过了(逃  
  
-#### 2016.12.17  
+### 2016.12.17  
 1.刷了两题，栈模拟队列，递归逆序栈。  
 2.js甚是复杂，总结了一点闭包，原以为目前技能点的最多的语言，看了谦谦开源的b站播发器一脸懵，总在想为什么人家可以这么厉害，而我喵了个咪的什么都不会。  
 3.新标日语背到第十一课单词，冬天在外面背书好冷。   
 
-#### 2016.12.18  
+### 2016.12.18  
 1.解决积累了一周的作业。  
 2.洗了一周的衣服。
 3.开了一个新项目商用的。
 
-#### 2016.12.19
+### 2016.12.19
 1.新标日背完11课单词和语法。  
 2.用markdown写开发文档，Windows下的不支持toc生成目录，捉急，找个时间自己写个插件。  
 3.今天竟然连一道左老师的题都没编完。
@@ -76,5 +74,10 @@ tags:
 1.又巩固了一下11课。   
 2.重头学了一遍ajax，但要自己手写ajax还是不行。  
 3.遍了好久又一题没编出来，随便一道题目只有一行的编程题都能让我对整个未来感到绝望。  
-4.还在复习java准备后天考试，虽然我觉得我会是第一个交卷的但还是要稳点。
+4.还在复习java准备后天考试，虽然我觉得我会是第一个交卷的但还是要稳点。  
+
+###  2016.12.21  
+1.搞定了一题，遇见了二维数组求最大矩形面积简直对未来感到绝望。  
+2.背第十二课单词。  
+3.今天一直在整markdown，换了马克飞象，果然用着比markdownpad舒服。  
      
