--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -84,7 +84,14 @@ tags:
 ### 2016.12.22  
 1.期末考试第一门。  
 2.自己写一个模板引擎，才写一点点都不到,泪。  
-3.换脑子时就写canvas。    
+3.换脑子时就写canvas。      
+
+### 2016.12.23
+1.模板引擎他喵的每次编译生成后再刷新时调用isFile检测文件函数就报错说未定义,缓存这块还没涉及到明天再看看。  
+2.Robocup3D环境早就更新了但一直没搭搞了好久simspark和rcsserver一直没装好，心痛。  
+3.喵的canvas如果用css控制大小会自动变大画质变差，只能在canvas里设置，考虑到兼容性只能用js来获取当前设备像素来设置并监测窗口大小来自适应了好烦。其实我想用canvas画一个哆啦A梦入门来着...    
+4.新标日语12课课文和语法。
+5.今天图书馆一下子变空荡了，明天研究生入学考试啊。
 
 
      
