--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -91,7 +91,17 @@ tags:
 2.Robocup3D环境早就更新了但一直没搭搞了好久simspark和rcsserver一直没装好，心痛。  
 3.喵的canvas如果用css控制大小会自动变大画质变差，只能在canvas里设置，考虑到兼容性只能用js来获取当前设备像素来设置并监测窗口大小来自适应了好烦。其实我想用canvas画一个哆啦A梦入门来着...    
 4.新标日语12课课文和语法。
-5.今天图书馆一下子变空荡了，明天研究生入学考试啊。
+5.今天图书馆一下子变空荡了，明天研究生入学考试啊。  
+
+### 2016.12.24  
+1.新机会，自己准备开发的校园BBS论坛已得到校领导授权，可以接入学校的数据库。  
+2.新标日语12课完结。  
+3.模板引擎支持原生语法，大概了解缓存机制的实现。  
+4.怕手生编了一道两个有序链表求公共部分，确实很简单，但难的又不会又烧时间。   
+
+### 2016.12.25  
+1.着手组建项目组开发人员。  
+
 
 
      
