--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -101,6 +101,12 @@ tags:
 
 ### 2016.12.25  
 1.着手组建项目组开发人员。  
+2.写模板捉急的要死，css布局基本功太差，最后还是套了Bootstrap。  
+3.试了点git命令，一直在用图形界面操作，但看大牛都是命令操作...  
+4.新标日语背13课单词。  
+4.发现canvas要玩的6，数学得好，各种坐标运算，泪  
+
+  
 
 
 
