--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -104,7 +104,15 @@ tags:
 2.写模板捉急的要死，css布局基本功太差，最后还是套了Bootstrap。  
 3.试了点git命令，一直在用图形界面操作，但看大牛都是命令操作...  
 4.新标日语背13课单词。  
-4.发现canvas要玩的6，数学得好，各种坐标运算，泪  
+5.发现canvas要玩的6，数学得好，各种坐标运算，泪。     
+
+### 2016.12.26 
+1.花了一个多小时考完书法网络课程，心好累，自作聪明从网上找了几份试卷一直在ctrl+f搜索，tab来回切换题目竟然粘帖不过去，又整到记事本里好多竟然没答案，还不如一题题百度快。  
+2.一到下雨天效率贼低，出去一趟被雨蹭的心烦意乱。  
+3.一直在装nodejs,第一次下.msi还是十几mb后来一直1024b，捉急死了。下载速度奇慢，翻墙也慢。   
+4.Atom喵的也是的，烦死据说很好用所以跟风，装好了但具体怎么优雅还不清楚。  
+5.发现自己啥都不精通，好气。
+
 
   
 
