--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -111,7 +111,14 @@ tags:
 2.一到下雨天效率贼低，出去一趟被雨蹭的心烦意乱。  
 3.一直在装nodejs,第一次下.msi还是十几mb后来一直1024b，捉急死了。下载速度奇慢，翻墙也慢。   
 4.Atom喵的也是的，烦死据说很好用所以跟风，装好了但具体怎么优雅还不清楚。  
-5.发现自己啥都不精通，好气。
+5.发现自己啥都不精通，好气。  
+
+### 2016.12.27  
+1.终于找到了正确写js的姿势，爱死了Atom了。  
+2.nodejs敲了几个demo,稍微了解了一点异步，其他还是晕乎乎的。  
+3.实验报告程序从头抄到尾，gui那么多控件居然也要一字不落的抄上去，累死。  
+4.晴天把一星期的衣服洗了，再不洗真的用二叉树排序筛选臭袜子穿了。  
+5.今天没干啥好难过。
 
 
   
