--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -118,7 +118,12 @@ tags:
 2.nodejs敲了几个demo,稍微了解了一点异步，其他还是晕乎乎的。  
 3.实验报告程序从头抄到尾，gui那么多控件居然也要一字不落的抄上去，累死。  
 4.晴天把一星期的衣服洗了，再不洗真的用二叉树排序筛选臭袜子穿了。  
-5.今天没干啥好难过。
+5.今天没干啥好难过。 
+
+### 2016.12.28  
+1.学了点http架构轮询什么的，大概知道了nodejs事件驱动和非阻塞是怎么一回事了。  
+2.敲了一个主页的上半部分，没用jquery全是手打原生js，因为没怎么用过jquery，每次要查感觉还不如手打快，熟练jquery肯定会改变我这种想法。  
+3.新标日十三课课文，单词里好几个菜名感觉背起来很吃力。   
 
 
   
