--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -125,7 +125,11 @@ tags:
 2.敲了一个主页的上半部分，没用jquery全是手打原生js，因为没怎么用过jquery，每次要查感觉还不如手打快，熟练jquery肯定会改变我这种想法。  
 3.新标日十三课课文，单词里好几个菜名感觉背起来很吃力。   
 
-
+### 2016.12.29  
+1.还在敲主页，一次ac原生js轮播果然还是不行，但倒没费多少时间就好了，毕竟之前的坑的踩过有了经验。  
+2.13课快背完了，说实话我也不知道我坚持学日语的动力是什么。暑假时我是一群人中学的最差的别人都背好多单词的时候我连假名都默不全。但是现在一群人中只有我还在学。  
+3.看了点数据结构方面，图的广度深度，斐波那契程序优化。  
+4.明天再去看一遍你的名字，一个人每天重复的过着重复的生活很累，有课上课，没课图书馆，九点出来去操场跑步，回来洗个澡再看会书一天就结束了，厌倦了这种生活。等未来的你真的好辛苦。
   
 
 
