--- a/_posts/2016-12-28-question.markdown
+++ b/_posts/2016-12-28-question.markdown
@@ -13,6 +13,7 @@ tags:
 
 ## 前台模板页方面
 ### 1.index
-1.在输入框后用after加一个块状元素，一直失败，查了一下后，发现input不支持伪元素，卒 。  	
+1.在输入框后用after加一个块状元素，一直失败，查了一下后，发现input不支持伪元素，卒 。
 2.a标签忽然变成默认紫色，设置父级div没有必须选择到div中的a标签才可以，顺带复习了一下权值。  
 3.一个表单里两个按钮居然覆盖了，搞了好久忽然发现原理是切图仔把文本框的背景和后面提交按钮也一起切下来了，卒，这个锅切图仔背！
+4.智商已下线，写操作dom的js一直没反应，忽然想起来没引入，卒。
