--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -30,7 +30,7 @@ tags:
 2.新标日背完第九课单词。  
 3.简单复习完java异常，准备下周java考试。
 4.今天最大收获是搞清楚了apply()和call()方法。    
-  
+
 ### 2016.12.13  
 1.电脑突然挂了，把硬盘里数据取出来后，找修电脑的检测了一下，只是有根线掉了...小哥赚外快真不容易呀，从南大街骑车一个多小时过来，还这么冷...忘记给他辛苦费了感觉过意不去。今天没学啥,泪。  
 2.用php给客户发给客户端的消息打日志，没搞清楚微信的接口是只要验证一次，下次不验证token都可以把信息发给服务器，之前以为微信每次提交数据给服务器都要验证一下随机的字符串。  
@@ -54,7 +54,7 @@ tags:
 4.新标日语第十课单词基本背完。  
 5.复习了java基础知识点，准备下周考试。
 6.明天四六级考试和我并没有什么关系呢，虽然六级分不高但总归过了(逃  
- 
+
 ### 2016.12.17  
 1.刷了两题，栈模拟队列，递归逆序栈。  
 2.js甚是复杂，总结了一点闭包，原以为目前技能点的最多的语言，看了谦谦开源的b站播发器一脸懵，总在想为什么人家可以这么厉害，而我喵了个咪的什么都不会。  
@@ -106,7 +106,7 @@ tags:
 4.新标日语背13课单词。  
 5.发现canvas要玩的6，数学得好，各种坐标运算，泪。     
 
-### 2016.12.26 
+### 2016.12.26
 1.花了一个多小时考完书法网络课程，心好累，自作聪明从网上找了几份试卷一直在ctrl+f搜索，tab来回切换题目竟然粘帖不过去，又整到记事本里好多竟然没答案，还不如一题题百度快。  
 2.一到下雨天效率贼低，出去一趟被雨蹭的心烦意乱。  
 3.一直在装nodejs,第一次下.msi还是十几mb后来一直1024b，捉急死了。下载速度奇慢，翻墙也慢。   
@@ -118,7 +118,7 @@ tags:
 2.nodejs敲了几个demo,稍微了解了一点异步，其他还是晕乎乎的。  
 3.实验报告程序从头抄到尾，gui那么多控件居然也要一字不落的抄上去，累死。  
 4.晴天把一星期的衣服洗了，再不洗真的用二叉树排序筛选臭袜子穿了。  
-5.今天没干啥好难过。 
+5.今天没干啥好难过。
 
 ### 2016.12.28  
 1.学了点http架构轮询什么的，大概知道了nodejs事件驱动和非阻塞是怎么一回事了。  
@@ -130,8 +130,6 @@ tags:
 2.13课快背完了，说实话我也不知道我坚持学日语的动力是什么。暑假时我是一群人中学的最差的别人都背好多单词的时候我连假名都默不全。但是现在一群人中只有我还在学。  
 3.看了点数据结构方面，图的广度深度，斐波那契程序优化。  
 4.明天再去看一遍你的名字，一个人每天重复的过着重复的生活很累，有课上课，没课图书馆，九点出来去操场跑步，回来洗个澡再看会书一天就结束了，厌倦了这种生活。等未来的你真的好辛苦。
-  
 
-
-
-     
+### 2016.12.30  
+二刷你的名字，控制不了情绪，没有看书。·
