--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -132,4 +132,19 @@ tags:
 4.明天再去看一遍你的名字，一个人每天重复的过着重复的生活很累，有课上课，没课图书馆，九点出来去操场跑步，回来洗个澡再看会书一天就结束了，厌倦了这种生活。等未来的你真的好辛苦。
 
 ### 2016.12.30  
-二刷你的名字，控制不了情绪，没有看书。·
+二刷你的名字，控制不了情绪，没有看书。·  
+
+### 2016.12.31  
+1.码好主页  
+2.再次写链表反转，脑子笨只能反复。  
+3.codepen上扒了两个demo组成一个元旦祝福动画。  
+
+### 2017.1.1  
+图书馆闭馆在宿舍看了遍江南的小说。    
+
+### 2017.1.2  
+1.码了点index和init的php,单纯做页面感觉没意思。  
+2.处理上周的作业。
+3.js正则但仍不熟悉需要查表。  
+4.尝试写了chrome最简单的插件，但安装后没反应。  
+5.新版日14课好多动词背累死。
