--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -147,4 +147,10 @@ tags:
 2.处理上周的作业。
 3.js正则但仍不熟悉需要查表。  
 4.尝试写了chrome最简单的插件，但安装后没反应。  
-5.新版日14课好多动词背累死。
+5.新版日14课好多动词背累死。  
+
+### 2017.1.3  
+1.14课单词背了一半。  
+2.ife第十七个task没做完。  
+3.昨天说好的今天看排序，结果就手打了一个冒泡和冒泡进阶，捂脸  
+4.等风的人看了一半，治愈啊。
