--- a/_posts/2016-12-11-daily.markdown
+++ b/_posts/2016-12-11-daily.markdown
@@ -153,4 +153,8 @@ tags:
 1.14课单词背了一半。  
 2.ife第十七个task没做完。  
 3.昨天说好的今天看排序，结果就手打了一个冒泡和冒泡进阶，捂脸  
-4.等风的人看了一半，治愈啊。
+4.等风的人看了一半，治愈啊。  
+
+### 2017.1.4   
+1.把两个月前没搞完的蓝牙app又拾起来搞了一晚上，原本想检测信号强度，超出一定距离后报警，但现在只能做到手动接触绑定报警，搞不动了好累，检测强度还要去噪声什么的好烦。  
+2.被模电整的白天都没干什么。
