--- a/_posts/2017-3-18-jsTicks.markdown
+++ b/_posts/2017-3-18-jsTicks.markdown
@@ -9,6 +9,7 @@ tags:
     - Javascript
 ---
 
+>随手总结一下学习过程中遇到的一些坑坑洼洼
 
 #### 1.让伪数组可以使用数组的方法
 
@@ -56,8 +57,7 @@ no talking, show me the code
       })(foo);
     console.log(foo.n)//3
     /*首先进行预编译，初始化全局变量foo,匿名函数，局部变量foo;
-    然后代码从上而下，从左至右运行，全局变量赋值(该变量为对象，属于引用类型)，匿名函数传入参数，console打印出1;
+    然后代码从上而下，从左至右运行，全局变量赋值(该变量为对象，属于引用类型)，匿名函数传入参数，console1;
     由于存在foo局部变量，foo被重新赋值，因为是引用类型，全局变量被重新赋值；
     var foo = {n:2};foo在第一步变量提升至匿名函数作用域中顶部，但在现在才被赋值，所以console打印出2
-    最后全局变量被改变打印3*/
-    <b>若</b>
+    最后全局变量被改变打印3,若传进来的参数是变量则属于复制,修改并不会影响到全局变量*/
