delete about and post some about nodejs

--- a/_posts/2017-3-18-jsTicks.markdown
+++ b/_posts/2017-3-18-jsTicks.markdown
@@ -66,3 +66,10 @@ no talking, show me the code
 
 #### 5. 运算符优先级
 错了好多遍，+ 的优先级高于三目运算符，小于括号。
+
+#### 6. 双等号引起的类型转换过程
+1. 首先看双等号前后有没有NaN，存在返回false。
+2. 再看双等号前后有没有布尔，存在把布尔转成数字。
+3. 接着看双等号前后有没有字符串，再分情况：若为对象，调用toString或valueOf转换，若为数字，字符串转数字，若为字符串直接比较，其他返回false。
+4. 如果一个是数字，一个是对象，对象转换后比较，否则返回false。
+5. null == undefined，undefined是派生自null值的，ECMA-262规定相等性测试返回true。
