modify recent blog

--- a/_posts/2017-4-5-node.markdown
+++ b/_posts/2017-4-5-node.markdown
@@ -24,7 +24,7 @@ tags:
 刚开始写的时候也是闷头开始搞，老师让我按软件工程的开发规范来先写文档，整个团队就一个开发人员而且我对前台框架也不了解怎么写。就这样一个人稀里糊涂的从五月初开始了，刚开始看了腾云阁三篇关于vue的入门文档，跟着写了几个组件大概知道怎么回事了，我一直很反感看视频的，顺便扯一下我对如何学习一门新技术或框架的看法，首先看文档的quick start部分，跑几个官方demo,各大论坛上看一些入门案例介绍后，api走马观花看一遍，然后去github上找高star项目，当时发现了现在已经8kstar的高仿饿了么和vue-cnode，事实上这两个项目对初学者来说还是比较难的，刚好高仿饿了么的作者bailicangdu还开源了一个只有几个页面的小型项目happyfri，git clone下来后每个流程跑一遍大概对vue已经有了一定了解了，一个猛子扎下去开干吧。
 
 
-脚手架构建好项目，写了几个组件和页面需要和后台交互时发现vue的作者不在维护vue-resource，果断按推荐换了axios，事实上这个项目我是自顶向下写的，极其不符合开发流程，学生我也很无奈啊，如果给我一张设计稿一份接口文档，前台需要哪些组件，后台需要哪些接口，我直接前端就写前端，自己模拟json数据调试，后端就写后端，最后再联调。在整个项目架构搭起来后从登录页面作为起点开始写，后台的话，其实也还是一个玩具产品，所有的请求首先经路由分发到api层各个对应的入口函数处理，登录和注册不需要携带token,其余请求首先在api层完成权限校验提取出用户id，过滤用户请求内容，传到控制层处理，控制层调用了封装在proxy层操作数据库的一些方法，完成数据拼接后返回给api层在返回给前台。
+脚手架构建好项目，写了几个组件和页面需要和后台交互时发现vue的作者不在维护vue-resource，果断按推荐换了axios，事实上这个项目我是自顶向下写的，极其不符合开发流程，学生我也很无奈啊，如果给我一张设计稿一份接口文档，前台需要哪些组件，后台需要哪些接口，我直接前端就写前端，自己模拟json数据调试，后端就写后端，最后再联调。在整个项目架构搭起来后从登录页面作为起点开始写，后台的话，其实也还是一个玩具产品，所有的请求首先经路由分发到api层各个对应的入口函数处理，登录和注册不需要携带token,其余请求首先经路由分发，抽出一个中间件完成权限校验，然后走api层过滤处理用户请求内容，然后传到控制层，控制层调用了封装在proxy层操作数据库的一些方法，完成数据拼接后返回给api层在返回给前台。
 
 其实后台的分层架构是读了nodeclub即cnode社区的源码的，cnode由于历史原因用了eventproxy处理异步操作，于是我把proxy层的操作全部return成promise对象，在控制层链式调用，中间踩了很多坑，诸如promise.all循环问题，拜读了《你不知道的promise》一文后大受启发，学到了很多。关于promise写多了一坨坨的then其实也很恶心的，而且用了promise所有的地方也得用pomise才能拿到数据，所以并不能返回给api层纯粹的数据。api层也要then一下。终极方案async确实很优雅，强行把异步伪装成同步。
 
